# aoc2022-py

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/template/: main.py
